# CppCon2020B2BTemplates

./: .gitignore  CMakeLists.txt
src/: Requires.cpp  SFINAE.cpp  TagDispatch.cpp  VariadicTemplate.cpp
